tweaked task model

--- a/assets/ui/ComputerTerminal.ui
+++ b/assets/ui/ComputerTerminal.ui
@@ -11,10 +11,7 @@
                 "contents": [
                     {
                         "id": "computerTerminal",
-                        "type": "ModularComputers:ComputerTerminalWidget",
-                        "monospaceFont": "ModularComputers:november",
-                        "characterWidth": 8,
-                        "fontHeight": 16
+                        "type": "ModularComputers:ComputerTerminalWidget"
                     }
                 ],
                 "layoutInfo": {
